# obs-cam-focus-switcher

./: README.md  pyproject.toml
etc/: config.yaml
src/: obs-camera-focus-switcher.py  obs-camera-focus-switcher0.py  obs-camera-focus-switcher2.py  obs-camera-focus-switcher3.py  obs-camera-focus-switcher4.py
